@@ -1,7 +1,8 @@
 
-<div>
+<div style="border:5px dotted #ffcc00" class="div">
+  <img width="60" alt="jetstream" src="https://user-images.githubusercontent.com/51061202/164430813-f42db212-9183-4bf6-a06a-1b90698e82ee.png">
   <h1> JetStream </h1>
-  <img width="60" alt="https://user-images.githubusercontent.com/51061202/164430813-f42db212-9183-4bf6-a06a-1b90698e82ee.png">
+  
 </div>
   
 A desktop based flight application with an intractive world map and geolocation support.
@@ -20,3 +21,52 @@ Java support javaFX as a tool that build desktop, mobile and other platform appl
 
 
 <h1>Run the program</h1>
+
+<h3>Step 1. </h3>
+<span>Open jetstream project with intelliJ IDE.</span>
+
+
+<h3>Step 2. </h3>
+<span>Wait for the project to load. Then click “Load Gradle Project” in the bottom right.</span>
+
+
+<h3>Step 3. </h3>
+<span>Click trust project. It will take a while to load Gradle. When done, run App.java.</span>
+
+
+<h3>Step 4. </h3>
+<span>If you get the error. </span>
+<p>Windows: go to https://gluonhq.com/products/javafx/ and download: Windows, 18, x64, SDK.</p>
+<p>Mac: go to https://gluonhq.com/products/javafx/ and download: Mac, 18,x64, SDK, Unpack zip folder in Download files. </p>
+
+
+<h3>Step 5. </h3>
+<span>Click "Run/debug config" at top between the green buttons. Click on (run > edit configoration)</span>
+
+
+<h3>Step 6. </h3>
+<span>You should get this window:</span>
+
+
+<h3>Step 7. </h3>
+<span>Click “Modify options” in blue text.</span>
+
+
+<h3>Step 8. </h3>
+<span>Then check “Add VM option”. You should get this box rounded with a blue border. </span>
+  
+
+<h3>Step 9. </h3>
+<span>Paste this in "VM options":
+--module-path "C:\Users\username\Downloads\openjfx-18_windows-x64_bin-sdk\javafx-sdk-18\lib" --add-modules=javafx.controls,javafx.fxml,javafx.media
+ </span>
+ 
+ <h2>Attention! Make sure to edit username to your computer username. </h2>
+ 
+ <p>Click ok and you are good to go!</p>
+
+ 
+ <h4>You can reach us buy the this email address: jetStream.oksh@gmail.com</h4>
+ 
+  
+ <h1>Good Luck</h1>
